# ServerActixPsql

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  app.db
migrations/2022-02-15-202801_links/: down.sql  up.sql
migrations/2022-02-15-202801_users/: down.sql  up.sql
src/: auth.rs  cipher.rs  main.rs  models.rs  routes.rs  schema.rs
templates/: auth.html  create_interface.html.tera  home.css  home.html  index.html  index.html.tera  key_gen.html.tera  profile.html  profile.html.tera  succ_fails.html  tutorial.html.tera  vpns.html.tera
templates/css/: auth.css  header.css  home.css  style.css  succ.css
templates/js/: hash_algorithm.js  interface.js  key_generator.js
