[package]
name = "demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
actix-session = "0.3"
tracing = "0.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
easy-hasher = "2.2.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1.0.0"
derive_more = "0.99.2"
reqwest = "0.9.22"
openssl = "0.10"
tera = "1.5.0"
execute = "0.2.9"
rand = "0.8.4"
rust-argon2 = "0.8"


#Lettre
tokio = { version = "1", features = ["full"] }
rusoto_core = { version = "0.46", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.46", default-features = false, features = ["rustls"] }
base64 = "0.13"
lettre = "0.10.0-beta.1"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]